Add functionality to Array.html and obj.html; create Palindrom.js for palindromic number filtering

--- a/Array.html
+++ b/Array.html
@@ -55,6 +55,12 @@ document.write("<ul>")
 
     var n= b.lastIndexOf("riyaa",3)
     document.write(n)
+
+
+    b.push("harsh")  // add element at the end of the array
+    document.write("<br>")
+    document.write(b + "<br>")
+
 </script>
 <body>
 </body>
