Add ClassAssignment.html and EventListener.html for personal details display and multiple event handling examples; create Sample.xml and bookstore.xml for student and book data representation

--- a/EventListner.html
+++ b/EventListner.html
@@ -6,7 +6,7 @@
 <button id = "btn"> Click me </button>  
 <p id = "para"></p>  
 <script>  
-document.getElementById("btn").addEventListener("click", fun);  
+document.getElementById("btn").addEventListener("click",);  
 function fun() {  
 document.getElementById("para").innerHTML = "Hello World" + "<br>" + "Welcome to the  HelloWorld.com";  
 }  
